# templates

erlang/: comp_idl_templ  gen_event.erl  gen_fsm.erl  gen_server.erl  include.hrl  module.erl  module_tests.erl  supervisor.erl  test_SUITE.erl
rtc_cpp/: CMakeLists.txt  README.txt
rtc_cpp/cmake/: CMakeLists.txt  cpack_options.cmake.in  rtcRenameMe-config.cmake.in  rtcomp_utils.cmake
rtc_cpp/cmake/Modules/: FindOpenRTM.cmake
rtc_cpp/comp/: rtc.cpp  rtc.h  service_impl.cpp  service_impl.h  standalone.cpp
rtc_cpp/doc/: conf.py.in  manual.tex
rtc_cpp/doc/content/: index.txt  index_j.txt
rtc_cpp/examples/conf/: CMakeLists.txt  rtc.conf  rtcRenameMe.conf.in
rtc_cpp/idl/: CMakeLists.txt  RenameMe.idl  service.idl
rtc_cpp/include/: CMakeLists.txt
rtc_cpp/include/rtcRenameMe/: CMakeLists.txt  interface_impl.h  rtcRenameMe.h
rtc_cpp/src/: CMakeLists.txt  interface_impl.cpp  rtcRenameMe.cpp  standalone.cpp
rtc_cpp/test/: CMakeLists.txt  test_RenameMe.cpp  test_consts.h.in
rtc_py/: rtc.py
